# CV_Work

./: CameraCalib.py  Chessboard.py  Homography.py  OpticalFlow.py  PhotometricStereo.py  README.md  SkinDet.py  main.py
Cam_Calibration/: CMakeLists.txt
Cam_Calibration/app/: CMakeLists.txt  Calibration.cpp
Cam_Calibration/include/: Confidence.h  Optimizer.h  Zhang.h
Cam_Calibration/src/: CMakeLists.txt  Confidence.cpp  Optimizer.cpp  Zhang.cpp
data/corridor/: bt0.pgm  bt1.pgm  bt10.pgm  bt2.pgm  bt3.pgm  bt4.pgm  bt5.pgm  bt6.pgm  bt7.pgm  bt8.pgm  bt9.pgm
data/synth/: synth_002.pgm  synth_003.pgm  synth_004.pgm  synth_005.pgm  synth_006.pgm  synth_007.pgm
